--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -4,7 +4,7 @@
 
 .banner-img {
     width: 100%;
-    mask-image: linear-gradient(to right transparent, black 75%);
+    mask-image: linear-gradient(to right, transparent, black 75%);
     -weblit-mask-image: linear-gradient(to right, transparent, black 75%); 
 }
 
